--- a/netbox_cisco_support/templates/netbox_cisco_support/cisco_support_device_type.html
+++ b/netbox_cisco_support/templates/netbox_cisco_support/cisco_support_device_type.html
@@ -2,7 +2,7 @@
 
 {% if cisco_device_type_support %}
     <div class="card">
-        <h5 class="card-header">Cisco Device Type Support Information</h5>
+        <h5 class="card-header">Cisco Device Type - Support Information</h5>
         <div class="card-body">
             <table class="table table-hover panel-body attr-table">
                 <tbody>
