Updated eox sync script

--- a/netbox_cisco_support/templates/netbox_cisco_support/cisco_support_device.html
+++ b/netbox_cisco_support/templates/netbox_cisco_support/cisco_support_device.html
@@ -42,7 +42,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Support Info Last Updated:</td>
+                        <td>Support Information Last Updated</td>
                         <td><span>{{ cisco_device_support.last_updated|annotated_date }}</span> 
                             <span class="separator">&middot;</span>
                             <span>({{ cisco_device_support.last_updated|timesince }} ago)</span>
